--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,16 @@
 # Compiled class file
 
-.idea/
+.idea
 persistence/target/
 web/target/
 service/target/
 model/target/
+
+movieland.iml
+persistence/persistence.iml
+web/web.iml
+service/service.iml
+model/model.iml
 
 *.class
 
