--- a/movieland-service/pom.xml
+++ b/movieland-service/pom.xml
@@ -9,16 +9,16 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>service</artifactId>
+    <artifactId>movieland-service</artifactId>
     <dependencies>
         <dependency>
             <groupId>com.stezhka</groupId>
-            <artifactId>model</artifactId>
+            <artifactId>movieland-model</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.stezhka</groupId>
-            <artifactId>persistence</artifactId>
+            <artifactId>movieland-persistence</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
