--- a/movieland-web/pom.xml
+++ b/movieland-web/pom.xml
@@ -8,7 +8,7 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>web</artifactId>
+    <artifactId>movieland-web</artifactId>
     <modelVersion>4.0.0</modelVersion>
     <packaging>war</packaging>
 
@@ -46,7 +46,7 @@
 
         <dependency>
             <groupId>com.stezhka</groupId>
-            <artifactId>service</artifactId>
+            <artifactId>movieland-service</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
